automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,9 +194,9 @@
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    x_list = []\n",
-    "    y_\n",
+    "    y_list = []\n",
     "    for datum in data:\n",
-    "        \n",
+    "        data\n",
     "    pass"
    ]
   },
