--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -196,7 +196,7 @@
     "    x_list = []\n",
     "    y_list = []\n",
     "    for datum in data:\n",
-    "        data\n",
+    "        data[datum]\n",
     "    pass"
    ]
   },
