automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
     "    y_list = []\n",
     "    for datum in data:\n",
     "        x_list.append(data[datum]['x'])\n",
-    "        y_list.append(d)\n",
+    "        y_list.append(data[datum]['y'])\n",
     "                      \n",
     "    pass"
    ]
