--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
     "    for datum in data:\n",
     "        x_list.append(data[datum]['x'])\n",
     "        y_list.append(data[datum]['y'])\n",
-    "                   \n",
+    "    return                \n",
     "    pass"
    ]
   },
