automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
     "    for datum in data:\n",
     "        x_list.append(data[datum]['x'])\n",
     "        y_list.append(data[datum]['y'])\n",
-    "    return {'mode': mode}               \n",
+    "    return {'mode': mode, 'name': name, }               \n",
     "    pass"
    ]
   },
