automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    x_list = []\n",
     "    y_list = []\n",
-    "    for i in list(range(:\n",
+    "    for i in list(range(0, len(data:\n",
     "        x_list.append(data[datum]['x'])\n",
     "        y_list.append(data[datum]['y'])\n",
     "    return {'mode': mode, 'name': name, 'x': x_list, 'y': y_list}               \n",
