automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,9 +195,9 @@
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    x_list = []\n",
     "    y_list = []\n",
-    "    for i in list(range(0, len(data:\n",
-    "        x_list.append(data[datum]['x'])\n",
-    "        y_list.append(data[datum]['y'])\n",
+    "    for i in list(range(0, len(data))):\n",
+    "        x_list.append(data[i]['x'])\n",
+    "        y_list.append(data[datu]['y'])\n",
     "    return {'mode': mode, 'name': name, 'x': x_list, 'y': y_list}               \n",
     "    pass"
    ]
