--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -368,12 +368,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-770ad4f44aab>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-770ad4f44aab>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {'mode': mode, 'name': name, 'x': x_values, 'y', y_values}\u001b[0m\n\u001b[0m                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def trace_values(x_values, y_values, mode = 'markers', name=\"data\"):\n",
-    "    return {'mode': mode, 'name': name, 'x': x_values}\n",
+    "    return {'mode': mode, 'name': name, 'x': x_values, 'y' y_values}\n",
     "     pass"
    ]
   },
