--- a/index.ipynb
+++ b/index.ipynb
@@ -576,21 +576,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-23-d8e41cfec16b>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-d8e41cfec16b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {'xaxis': {'range'}: x_range}\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
-    "    return {'xaxis': {'range'}: x_range}\n",
+    "    return {'xaxis': {'range': x_range}}\n",
     "    pass"
    ]
   },
