--- a/index.ipynb
+++ b/index.ipynb
@@ -581,7 +581,7 @@
    "outputs": [],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
-    "    if x_range != None:\n",
+    "    if x_range != None && y_range != None:\n",
     "        return {'xaxis': {'range': x_range}}\n",
     "    return {}\n",
     "    pass"
