--- a/index.ipynb
+++ b/index.ipynb
@@ -582,7 +582,7 @@
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    if x_range != None && y_range != None:\n",
-    "        return {'xaxis': {'range': x_range}}\n",
+    "        return {'xaxis': {'range': x_range}, 'yaxis'{}}\n",
     "    return {}\n",
     "    pass"
    ]
