automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -584,7 +584,7 @@
     "    if x_range != None && y_range != None:\n",
     "        return {'xaxis': {'range': x_range}, 'yaxis'{'range': y_range}}\n",
     "    else if x_range != None:\n",
-    "        return {'xaxis}\n",
+    "        return {'xaxis': {'range': x_range}}\n",
     "    return {}\n",
     "    pass"
    ]
