--- a/index.ipynb
+++ b/index.ipynb
@@ -576,19 +576,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-30-d347d5a86068>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-d347d5a86068>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'xaxis': {'range': x_range}, 'yaxis'{'range': y_range}}\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
-    "    if x_range != None && y_range != None:\n",
+    "    if x_range != None & y_range != None:\n",
     "        return {'xaxis': {'range': x_range}, 'yaxis'{'range': y_range}}\n",
     "    else if x_range != None:\n",
     "        return {'xaxis': {'range': x_range}}\n",
     "    else if y_range != None:\n",
     "        return {'yaxis'{'range': y_range}}\n",
-    "    else \n",
-    "    return {}\n",
+    "    else:\n",
+    "        return {}\n",
     "    pass"
    ]
   },
