--- a/index.ipynb
+++ b/index.ipynb
@@ -576,26 +576,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-30-d347d5a86068>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-31-2a3dccbb2e1f>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-d347d5a86068>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'xaxis': {'range': x_range}, 'yaxis'{'range': y_range}}\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-2a3dccbb2e1f>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    else if x_range != None:\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    if x_range != None & y_range != None:\n",
-    "        return {'xaxis': {'range': x_range}, 'yaxis'{'range': y_range}}\n",
+    "        return {'xaxis': {'range': x_range}, 'yaxis':{'range': y_range}}\n",
     "    else if x_range != None:\n",
     "        return {'xaxis': {'range': x_range}}\n",
     "    else if y_range != None:\n",
-    "        return {'yaxis'{'range': y_range}}\n",
+    "        return {'yaxis':{'range': y_range}}\n",
     "    else:\n",
     "        return {}\n",
     "    pass"
