--- a/index.ipynb
+++ b/index.ipynb
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "{}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,11 +697,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'xaxis': {'range': [1, 3]}, 'yaxis': {'range': [4, 5]}}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "layout([1, 3], [4, 5])\n",
     "# {'xaxis': {'range': [1, 3]}, 'yaxis': {'range': [4, 5]}}"
