--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -582,8 +582,8 @@
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    details = {}\n",
-    "    if x_range != None and y_range != None:\n",
-    "        return {'xaxis': {'range': x_range}, 'yaxis':{'range': y_range}}\n",
+    "    if x_range != None:\n",
+    "        deta {'xaxis': {'range': x_range}, 'yaxis':{'range': y_range}}\n",
     "    elif x_range != None:\n",
     "        return {'xaxis': {'range': x_range}}\n",
     "    elif y_range != None:\n",
