automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -584,8 +584,9 @@
     "    details = {}\n",
     "    if x_range != None:\n",
     "        details.update({'xaxis': {'range': x_range}})\n",
-    "    elif y_range != None:\n",
-    "        details.update( {'yaxis':{'range': y_range}}\n",
+    "    if y_range != None:\n",
+    "        details.update( {'yaxis':{'range': y_range}})\n",
+    "        \n",
     "    else:\n",
     "        return {}\n",
     "    pass"
