--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -586,7 +586,7 @@
     "        details.update({'xaxis': {'range': x_range}})\n",
     "    if y_range != None:\n",
     "        details.update( {'yaxis':{'range': y_range}})\n",
-    "        \n",
+    "    if options\n",
     "    else:\n",
     "        return {}\n",
     "    pass"
