automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -586,8 +586,8 @@
     "        details.update({'xaxis': {'range': x_range}})\n",
     "    if y_range != None:\n",
     "        details.update( {'yaxis':{'range': y_range}})\n",
-    "    if options!= {:\n",
-    "        \n",
+    "    if options != {}:\n",
+    "        details.update\n",
     "    else:\n",
     "        return {}\n",
     "    pass"
