automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
     "    if y_range != None:\n",
     "        details.update( {'yaxis':{'range': y_range}})\n",
     "    if options != {}:\n",
-    "        details.update\n",
+    "        details.update(options)\n",
     "    else:\n",
     "        return {}\n",
     "    pass"
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "{}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,16 +637,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'xaxis': {'range': [1, 4]}}"
+       "{}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
